# pakx

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-build.yml  release-dispatch.yml
crates/pakx/: Cargo.toml
crates/pakx-agents/: Cargo.toml
crates/pakx-agents/src/: adapter.rs  claude_code.rs  codex.rs  copilot.rs  cursor.rs  error.rs  lib.rs  windsurf.rs
crates/pakx-agents/tests/: claude_code.rs  claude_code_mcp.rs  other_adapters.rs
crates/pakx-core/: Cargo.toml
crates/pakx-core/src/: atomic_write.rs  credentials.rs  errors.rs  http_client.rs  install.rs  lib.rs  validation.rs
crates/pakx-core/src/lockfile/: io.rs  mod.rs  parse.rs  schema.rs  write.rs
crates/pakx-core/src/manifest/: io.rs  mod.rs  mutate.rs  parse.rs  path.rs  schema.rs  sponsors.rs  write.rs
crates/pakx-core/tests/: credentials.rs  lockfile.rs  manifest.rs  mutate.rs
crates/pakx-registry-client/: Cargo.toml
crates/pakx-registry-client/src/: cache.rs  client.rs  device_auth.rs  errors.rs  lib.rs  official_mcp.rs  pakx_backend.rs  pakx_source.rs  smithery.rs  source.rs  types.rs
crates/pakx-registry-client/tests/: cache.rs  official_mcp.rs  pakx_source.rs  smithery.rs
crates/pakx/src/: main.rs  pack.rs  redact.rs  registry_hint.rs  registry_url.rs  resolve.rs  ui.rs
crates/pakx/src/commands/: add.rs  audit.rs  cache_tempdir.rs  completion.rs  config.rs  doctor.rs  export.rs  info.rs  init.rs  install.rs  list.rs  login.rs  manifest.rs  mod.rs  new.rs  outdated.rs  pack.rs  publish.rs  remove.rs  search.rs  test.rs  tree.rs  unpublish.rs  update.rs  upgrade.rs  whoami.rs  why.rs
crates/pakx/src/install/: bundle.rs  mcp_translate.rs  mod.rs  progress.rs  rollback.rs  runner.rs  skill.rs
crates/pakx/tests/: add.rs  audit.rs  bundle_e2e.rs  cache_tempdir_cleanup.rs  cli_coverage_sweep.rs  dep_lifecycle.rs  dep_roundtrip.rs  doctor.rs  e2e_real_binary.rs  end_to_end.rs  export.rs  federated_source_matrix.rs  info.rs  init.rs  list.rs  lockfile_state.rs  login_device.rs  login_publish.rs  manifest.rs  manifest_edge_cases.rs  new_scaffold.rs  outdated.rs  pack.rs  pin_rewrite.rs  pin_rewrite_validation.rs  remove.rs  rollback_e2e.rs  search.rs  skills_e2e.rs  smoke.rs  subcommand_surface.rs  test_cmd.rs  tree.rs  upgrade.rs  why.rs
examples/: README.md
examples/agents-yml-starter/: README.md  agents.yml
examples/hello-world/: README.md  SKILL.md
