[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/pakxdev/pakx"
homepage = "https://github.com/pakxdev/pakx"
authors = ["pakx contributors"]
rust-version = "1.87"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
# Errors
anyhow = "1.0"
thiserror = "1.0"
# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde_yaml is archived; serde_yml was unmaintained + unsound
# (RUSTSEC-2025-0067/0068). serde_yaml_ng is the actively maintained
# drop-in fork.
serde_yaml_ng = "0.10"
# Async + HTTP (used later by registry-client)
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
futures = "0.3"
# Interactive prompts
inquire = { version = "0.9", default-features = false, features = ["crossterm"] }
# Cross-platform home/config dir resolution
dirs = "5"
# Sha256 over file payloads (integrity verification)
sha2 = "0.10"
base64 = "0.22"
# Temp dirs in tests, atomic writes in production
tempfile = "3.13"
# HTTP mocking in tests
wiremock = "0.6"
# Tarball construction for `pakx pack` / `pakx publish`
tar = "0.4"
flate2 = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Terminal styling — NO_COLOR-aware ANSI codes; pulled in only for
# human-readable output paths. JSON / --json never gets colored bytes.
owo-colors = "4"
# UTF-8 bordered tables for `pakx list` / `pakx search`. Chosen over
# `tabled` because it streams (no full-table macro) and clamps to a
# user-supplied width — handy for piping to narrow terminals.
#
# `custom_styling` makes column-width measurement ANSI-aware: a cell
# whose content is a pre-colored owo_colors string (e.g. the green
# `[ok]` badge in `pakx list`) is measured by its VISIBLE width
# (`ansi_strip().width()`) instead of its raw escaped byte length.
# Without it, the escape bytes inflate the computed column width and
# the box-drawing borders no longer line up under `--color always` /
# a real color terminal. The feature pulls in `console` + `ansi-str`;
# `console` is already in the tree via `indicatif`, so the cost is
# near-zero. It also re-enables the `tty` (crossterm) dep that
# `default-features = false` had dropped — still cheap, and we keep
# `default-features = false` to avoid any other default pickups.
comfy-table = { version = "7", default-features = false, features = ["custom_styling"] }
# Spinners + progress bars for long ops (install, publish upload).
# Disabling default features keeps `regex` out; we only use the bar +
# spinner APIs.
indicatif = { version = "0.17", default-features = false }
# Detect terminal width so tables can truncate sensibly.
terminal_size = "0.4"
# Validation
regex = "1.11"
# Semver comparison for `pakx outdated` — compares lockfile-pinned
# versions against registry-side `latestVersion`. v1 is stable.
semver = "1.0"
# URL parsing — used to vet test-only registry base URL overrides
# against userinfo / scheme / host smuggling.
url = "2.5"
# Cross-platform machine hostname for `pakx login --device` — sent to
# the registry as `clientHostname` so the user sees a familiar label on
# the device-approval page. Single source file, no transitive deps
# beyond `libc`.
gethostname = "0.5"
# Internal crates
pakx-core = { path = "crates/pakx-core", version = "0.1.10" }
pakx-agents = { path = "crates/pakx-agents", version = "0.1.10" }
pakx-registry-client = { path = "crates/pakx-registry-client", version = "0.1.10" }

[workspace.dependencies.assert_cmd]
version = "2.0"

[workspace.dependencies.predicates]
version = "3.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic exclusions: pedantic/nursery contain stylistic noise unsuited to v0.1.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
