[package]
name = "pakx-agents"
description = "pakx agent adapters — Claude Code, Cursor, Codex, Copilot, Windsurf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
pakx-core = { workspace = true }

[lints]
workspace = true
