[package]
name = "pakx-core"
description = "pakx core — manifest, lockfile, resolver, installer logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
