[package]
name = "pakx"
description = "Universal package manager for AI agent context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
default-run = "pakx"

[[bin]]
name = "pakx"
path = "src/main.rs"

[dependencies]
pakx-core = { workspace = true }
pakx-agents = { workspace = true }
pakx-registry-client = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
inquire = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
dirs = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
owo-colors = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
terminal_size = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
